--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     lihpro
-zhihu_username:     lihpro
-github_username:    lihpro
+weibo_username:     5639112278
+zhihu_username:     
+github_username:    hanglegehang
 #twitter_username:  huxpro
-facebook_username:  lihpro
+facebook_username:  
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -95,32 +95,5 @@ friends: [
     },{
         title: "乱序",
         href: "http://mida.re/"
-    },{
-        title: "前端外刊评论",
-        href: "http://qianduan.guru/"
-    },{
-        title: "天镶的博客",
-        href: "http://lingyu.wang/"
-    },{
-        title: "Luke 的自留地",
-        href: "http://hmqk1995.github.io"
-    },{
-        title: "Ebn's Blog",
-        href: "http://ebnbin.com/"
-    },{
-        title: "SmdCn's Blog",
-        href: "http://blog.smdcn.net"
-    },{
-        title: "解旻的博客",
-        href: "http://xieminis.me/"
-    },{
-        title: "DHong Say",
-        href: "http://dhong.co"
-    },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
-    },{
-        title: "前端神盾局",
-        href: "http://wepiaofei.github.io/blog/"
     }
 ]
