--- a/_config.yml
+++ b/_config.yml
@@ -90,10 +90,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "Su",
-        href: "http://su.gallery/"
-    },{
-        title: "乱序",
-        href: "http://mida.re/"
+        title: "deacyn",
+        href: "http://blog.deacyn.cn"
     }
 ]
