--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     5639112278
-zhihu_username:     
+zhihu_username:     lihpro   
 github_username:    hanglegehang
 #twitter_username:  huxpro
 facebook_username:  
